force-app/main/default/objects/Customer_Application__c/Customer_Application__c.object-meta.xml
<CustomObject>
    <label>Online Application</label>
    <nameField>
        <displayFormat>APP-{000000}</displayFormat>
        <label>Online NBA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>