force-app/main/default/objects/Customer_Application__c/fields/Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Annual_Premium__c</fullName>
    <label>Annual Premium</label>
    <length>20</length>
    <type>Text</type>
</CustomField>