force-app/main/default/objects/Customer_Application__c/fields/Any_Disciplinary_Action__c.field-meta.xml
<CustomField>
    <fullName>Any_Disciplinary_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Disciplinary Action</label>
    <type>Checkbox</type>
</CustomField>