force-app/main/default/objects/Customer_Application__c/fields/Any_Other_Action__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Action__c</fullName>
    <label>Any Other Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>