force-app/main/default/objects/Customer_Application__c/fields/Any_Potential_Claim__c.field-meta.xml
<CustomField>
    <fullName>Any_Potential_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Potential Claim</label>
    <type>Checkbox</type>
</CustomField>