force-app/main/default/objects/Customer_Application__c/fields/AOP_Master_Factor__c.field-meta.xml
<CustomField>
    <fullName>AOP_Master_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AOP Master Factor</label>
    <referenceTo>Master_Factor__c</referenceTo>
    <relationshipName>Online_NBA</relationshipName>
    <type>Lookup</type>
</CustomField>