force-app/main/default/objects/Customer_Application__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <formula>PolicyId__r.Name</formula>
    <label>Application Number</label>
    <type>Text</type>
</CustomField>