force-app/main/default/objects/Customer_Application__c/fields/Areas_Of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Areas_Of_Practice__c</fullName>
    <label>Areas Of Practice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>