force-app/main/default/objects/Customer_Application__c/fields/Censured__c.field-meta.xml
<CustomField>
    <fullName>Censured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Censured</label>
    <type>Checkbox</type>
</CustomField>