force-app/main/default/objects/Customer_Application__c/fields/Close_Description__c.field-meta.xml
<CustomField>
    <fullName>Close_Description__c</fullName>
    <label>Close Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>