force-app/main/default/objects/Customer_Application__c/fields/Contact_E_mail_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_E_mail_Address__c</fullName>
    <label>Contact E-mail Address</label>
    <type>Email</type>
</CustomField>