force-app/main/default/objects/Customer_Application__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>County__c</referenceTo>
    <relationshipName>Customer_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>