force-app/main/default/objects/Customer_Application__c/fields/Date_Firm_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Firm_Established__c</fullName>
    <label>Date Firm Established</label>
    <type>Date</type>
</CustomField>