force-app/main/default/objects/Customer_Application__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <label>Deductible</label>
    <length>100</length>
    <type>Text</type>
</CustomField>