force-app/main/default/objects/Customer_Application__c/fields/Delete_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Delete_Requested_Date__c</fullName>
    <label>Delete Requested Date</label>
    <type>Date</type>
</CustomField>