force-app/main/default/objects/Customer_Application__c/fields/Disbarred__c.field-meta.xml
<CustomField>
    <fullName>Disbarred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disbarred</label>
    <type>Checkbox</type>
</CustomField>