force-app/main/default/objects/Customer_Application__c/fields/Does_the_Firm_have_a_backup_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Firm_have_a_backup_Lawyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the Firm have a backup Lawyer</label>
    <type>Checkbox</type>
</CustomField>