force-app/main/default/objects/Customer_Application__c/fields/Effective_Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Requested__c</fullName>
    <label>Effective Date Requested</label>
    <type>Date</type>
</CustomField>