force-app/main/default/objects/Customer_Application__c/fields/Firm_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Firm_Fax_Number__c</fullName>
    <label>Firm Fax Number</label>
    <type>Phone</type>
</CustomField>