force-app/main/default/objects/Customer_Application__c/fields/Firm_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Firm_Phone_Number__c</fullName>
    <label>Firm Phone Number</label>
    <type>Phone</type>
</CustomField>