force-app/main/default/objects/Customer_Application__c/fields/Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Form_Link__c</fullName>
    <label>Form Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>