force-app/main/default/objects/Customer_Application__c/fields/Full_Legal_Name_of_the_Firm__c.field-meta.xml
<CustomField>
    <fullName>Full_Legal_Name_of_the_Firm__c</fullName>
    <label>Full Legal Name of the Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>