force-app/main/default/objects/Customer_Application__c/fields/Highest_Stage__c.field-meta.xml
<CustomField>
    <fullName>Highest_Stage__c</fullName>
    <label>Highest Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>