force-app/main/default/objects/Customer_Application__c/fields/Incomplete_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Status_Message__c</fullName>
    <formula>&quot;Please click the \&quot;Save\&quot; button to update the application status to \&quot;Incomplete.\&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incomplete Status Message</label>
    <type>Text</type>
</CustomField>