force-app/main/default/objects/Customer_Application__c/fields/Inquire_About_Higher_Limits_Deductibles__c.field-meta.xml
<CustomField>
    <fullName>Inquire_About_Higher_Limits_Deductibles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I would like to inquire about higher limits or deductibles</description>
    <label>Inquire About Higher Limits/Deductibles</label>
    <type>Checkbox</type>
</CustomField>