force-app/main/default/objects/Customer_Application__c/fields/Is_the_firm_currently_insured__c.field-meta.xml
<CustomField>
    <fullName>Is_the_firm_currently_insured__c</fullName>
    <label>Is the firm currently insured?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>