force-app/main/default/objects/Customer_Application__c/fields/ISBAM_user_agent__c.field-meta.xml
<CustomField>
    <fullName>ISBAM_user_agent__c</fullName>
    <label>ISBAM user agent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>