force-app/main/default/objects/Customer_Application__c/fields/Lawyer_Information_Completed__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Information_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lawyer Information Completed</label>
    <type>Checkbox</type>
</CustomField>