force-app/main/default/objects/Customer_Application__c/fields/Limits_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Limits_of_Liability__c</fullName>
    <label>Limits of Liability</label>
    <length>100</length>
    <type>Text</type>
</CustomField>