force-app/main/default/objects/Customer_Application__c/fields/NBA_App_Source_Info__c.field-meta.xml
<CustomField>
    <fullName>NBA_App_Source_Info__c</fullName>
    <label>NBA App Source Info</label>
    <type>TextArea</type>
</CustomField>