force-app/main/default/objects/Customer_Application__c/fields/of_Insured_Lawyers__c.field-meta.xml
<CustomField>
    <fullName>of_Insured_Lawyers__c</fullName>
    <label># of Insured Lawyers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>