force-app/main/default/objects/Customer_Application__c/fields/Pending_Investigation_Proceeding__c.field-meta.xml
<CustomField>
    <fullName>Pending_Investigation_Proceeding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Investigation/Proceeding</label>
    <type>Checkbox</type>
</CustomField>