force-app/main/default/objects/Customer_Application__c/fields/PolicyId__c.field-meta.xml
<CustomField>
    <fullName>PolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application/Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipName>Online_NBA</relationshipName>
    <type>Lookup</type>
</CustomField>