force-app/main/default/objects/Customer_Application__c/fields/Potential_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Potential_Claim_Number__c</fullName>
    <label>Potential Claim Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>