force-app/main/default/objects/Customer_Application__c/fields/Prior_Claim_Completed__c.field-meta.xml
<CustomField>
    <fullName>Prior_Claim_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Claim Completed</label>
    <type>Checkbox</type>
</CustomField>