force-app/main/default/objects/Customer_Application__c/fields/Prior_Insurance_Completed__c.field-meta.xml
<CustomField>
    <fullName>Prior_Insurance_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Insurance Completed</label>
    <type>Checkbox</type>
</CustomField>