force-app/main/default/objects/Customer_Application__c/fields/Prior_Insurance_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Insurance_Expiration_Date__c</fullName>
    <label>Prior Insurance Expiration Date</label>
    <type>Date</type>
</CustomField>