force-app/main/default/objects/Customer_Application__c/fields/Prior_Insurance_Has_Retro_active_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Insurance_Has_Retro_active_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Insurance Has Retro-active Date</label>
    <type>Checkbox</type>
</CustomField>