force-app/main/default/objects/Customer_Application__c/fields/Professional_Claim_Number_Against_Firm__c.field-meta.xml
<CustomField>
    <fullName>Professional_Claim_Number_Against_Firm__c</fullName>
    <label>Professional Claim Number Against Firm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>