force-app/main/default/objects/Customer_Application__c/fields/Professional_Liability_Claim__c.field-meta.xml
<CustomField>
    <fullName>Professional_Liability_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professional Claim Against Firm</label>
    <type>Checkbox</type>
</CustomField>