force-app/main/default/objects/Customer_Application__c/fields/Q_AOP_2__c.field-meta.xml
<CustomField>
    <fullName>Q_AOP_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Q AOP 2</label>
    <referenceTo>AOP_Factor__c</referenceTo>
    <relationshipName>Online_NBA1</relationshipName>
    <type>Lookup</type>
</CustomField>