force-app/main/default/objects/Customer_Application__c/fields/Q_AOP_3__c.field-meta.xml
<CustomField>
    <fullName>Q_AOP_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Q AOP 3</label>
    <referenceTo>AOP_Factor__c</referenceTo>
    <relationshipName>Online_NBA2</relationshipName>
    <type>Lookup</type>
</CustomField>