force-app/main/default/objects/Customer_Application__c/fields/Q_Calendaring__c.field-meta.xml
<CustomField>
    <fullName>Q_Calendaring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your firm calendar and track dates and deadlines of client matters?</description>
    <label>Q Calendaring</label>
    <type>Checkbox</type>
</CustomField>