force-app/main/default/objects/Customer_Application__c/fields/Q_Conflict_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Q_Conflict_of_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your firm have a conflict-of-interest system?</description>
    <label>Q Conflict of Interest</label>
    <type>Checkbox</type>
</CustomField>