force-app/main/default/objects/Customer_Application__c/fields/Q_Conflict_Of_Interest_System_computer__c.field-meta.xml
<CustomField>
    <fullName>Q_Conflict_Of_Interest_System_computer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q_Conflict_Of_Interest_System_computer</label>
    <type>Checkbox</type>
</CustomField>