force-app/main/default/objects/Customer_Application__c/fields/Q_Conflict_Of_Interest_System_conflict__c.field-meta.xml
<CustomField>
    <fullName>Q_Conflict_Of_Interest_System_conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conflicts Software</description>
    <label>Q_Conflict_Of_Interest_System_conflict</label>
    <type>Checkbox</type>
</CustomField>