force-app/main/default/objects/Customer_Application__c/fields/Q_Conflict_Of_Interest_System_multiple__c.field-meta.xml
<CustomField>
    <fullName>Q_Conflict_Of_Interest_System_multiple__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Multiple Index</description>
    <label>Q_Conflict_Of_Interest_System_multiple</label>
    <type>Checkbox</type>
</CustomField>