force-app/main/default/objects/Customer_Application__c/fields/Q_Conflict_Of_Interest_System_practice_m__c.field-meta.xml
<CustomField>
    <fullName>Q_Conflict_Of_Interest_System_practice_m__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Practice management software</description>
    <label>Q_Conflict_Of_Interest_System_practice_m</label>
    <type>Checkbox</type>
</CustomField>