force-app/main/default/objects/Customer_Application__c/fields/Q_Conflict_Of_Interest_System_single_ind__c.field-meta.xml
<CustomField>
    <fullName>Q_Conflict_Of_Interest_System_single_ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Single Index</description>
    <label>Q_Conflict_Of_Interest_System_single_ind</label>
    <type>Checkbox</type>
</CustomField>