force-app/main/default/objects/Customer_Application__c/fields/Q_Docket_Calendar_System_Other__c.field-meta.xml
<CustomField>
    <fullName>Q_Docket_Calendar_System_Other__c</fullName>
    <label>Q_Docket_Calendar_System_Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>