force-app/main/default/objects/Customer_Application__c/fields/Q_Docket_Calendar_System_tickler__c.field-meta.xml
<CustomField>
    <fullName>Q_Docket_Calendar_System_tickler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q_Docket_Calendar_System_tickler</label>
    <type>Checkbox</type>
</CustomField>