force-app/main/default/objects/Customer_Application__c/fields/Q_Engagement_Letters__c.field-meta.xml
<CustomField>
    <fullName>Q_Engagement_Letters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the firm use engagement letters?</description>
    <label>Q Engagement Letters</label>
    <type>Checkbox</type>
</CustomField>