force-app/main/default/objects/Customer_Application__c/fields/Q_Firm_Conflict_Of_Interest_System__c.field-meta.xml
<CustomField>
    <fullName>Q_Firm_Conflict_Of_Interest_System__c</fullName>
    <label>Q Firm Conflict Of Interest System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>