force-app/main/default/objects/Customer_Application__c/fields/Q_Firm_Evaluate_New_Clients__c.field-meta.xml
<CustomField>
    <fullName>Q_Firm_Evaluate_New_Clients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q Firm Evaluate New Clients</label>
    <type>Checkbox</type>
</CustomField>