force-app/main/default/objects/Customer_Application__c/fields/Q_Firm_Gross_Revenue_Past_Year__c.field-meta.xml
<CustomField>
    <fullName>Q_Firm_Gross_Revenue_Past_Year__c</fullName>
    <label>Q Firm Gross Revenue Past Year</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>