force-app/main/default/objects/Customer_Application__c/fields/Q_Firm_Maintain_a_Docket__c.field-meta.xml
<CustomField>
    <fullName>Q_Firm_Maintain_a_Docket__c</fullName>
    <label>Q Firm Maintain a Docket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>