force-app/main/default/objects/Customer_Application__c/fields/Q_Firm_Notify_Clients_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Q_Firm_Notify_Clients_Terminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q Firm Notify Clients Terminated</label>
    <type>Checkbox</type>
</CustomField>