force-app/main/default/objects/Customer_Application__c/fields/Q_Firm_Review_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Q_Firm_Review_Conflicts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q Firm Review Conflicts</label>
    <type>Checkbox</type>
</CustomField>