force-app/main/default/objects/Customer_Application__c/fields/Q_Firm_Share_Cases_Insured__c.field-meta.xml
<CustomField>
    <fullName>Q_Firm_Share_Cases_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q Firm Share Cases Insured</label>
    <type>Checkbox</type>
</CustomField>