force-app/main/default/objects/Customer_Application__c/fields/Q_Firm_Use_Agreements_Or_Engagement_Lett__c.field-meta.xml
<CustomField>
    <fullName>Q_Firm_Use_Agreements_Or_Engagement_Lett__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q Firm Use Agreements Or Engagement Lett</label>
    <type>Checkbox</type>
</CustomField>