force-app/main/default/objects/Customer_Application__c/fields/Q_Lawyer_Backup_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Q_Lawyer_Backup_Carrier__c</fullName>
    <label>Q Lawyer Backup Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>