force-app/main/default/objects/Customer_Application__c/fields/Q_Lawyer_Backup_Phone__c.field-meta.xml
<CustomField>
    <fullName>Q_Lawyer_Backup_Phone__c</fullName>
    <label>Q Lawyer Backup Phone</label>
    <type>Phone</type>
</CustomField>