force-app/main/default/objects/Customer_Application__c/fields/Q_Non_enganement_Letters__c.field-meta.xml
<CustomField>
    <fullName>Q_Non_enganement_Letters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the firm use non-engagement letters?</description>
    <label>Q Non-enganement Letters</label>
    <type>Checkbox</type>
</CustomField>