force-app/main/default/objects/Customer_Application__c/fields/Q_Non_Lawyer_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Q_Non_Lawyer_Personnel__c</fullName>
    <label>Q Non-Lawyer Personnel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>