force-app/main/default/objects/Customer_Application__c/fields/Q_Outside_IL__c.field-meta.xml
<CustomField>
    <fullName>Q_Outside_IL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the firm practice in states other than Illinois?</description>
    <label>Q Outside IL</label>
    <type>Checkbox</type>
</CustomField>