force-app/main/default/objects/Customer_Application__c/fields/Q_Outside_IL_Description__c.field-meta.xml
<CustomField>
    <fullName>Q_Outside_IL_Description__c</fullName>
    <label>Q Outside IL Desc</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>