force-app/main/default/objects/Customer_Application__c/fields/Refused_Admittance_to_Bar_or_Court__c.field-meta.xml
<CustomField>
    <fullName>Refused_Admittance_to_Bar_or_Court__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refused Admittance to Bar or Court</label>
    <type>Checkbox</type>
</CustomField>