force-app/main/default/objects/Customer_Application__c/fields/Rejected_Status__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Status__c</fullName>
    <label>Rejected Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>