force-app/main/default/objects/Customer_Application__c/fields/Rejection_Description__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Description__c</fullName>
    <label>Rejection Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>