force-app/main/default/objects/Customer_Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMER - ERE</fullName>
            </value>
            <value>
                <fullName>CUSTOMER - Price</fullName>
            </value>
            <value>
                <fullName>CUSTOMER - Coverage</fullName>
            </value>
            <value>
                <fullName>CUSTOMER - Practice Closed</fullName>
            </value>
            <value>
                <fullName>CUSTOMER - Complaint</fullName>
            </value>
            <value>
                <fullName>CUSTOMER - Other</fullName>
            </value>
            <value>
                <fullName>--------------------------------------------</fullName>
            </value>
            <value>
                <fullName>ISBAM - Internal Procedures</fullName>
            </value>
            <value>
                <fullName>ISBAM - Disciplinary Issues</fullName>
            </value>
            <value>
                <fullName>ISBAM - Claims</fullName>
            </value>
            <value>
                <fullName>ISBAM - No Response</fullName>
            </value>
            <value>
                <fullName>ISBAM - Other</fullName>
            </value>
            <value>
                <fullName>ISBAM - IMPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>