force-app/main/default/objects/Customer_Application__c/fields/Reprimanded__c.field-meta.xml
<CustomField>
    <fullName>Reprimanded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reprimanded</label>
    <type>Checkbox</type>
</CustomField>