force-app/main/default/objects/Customer_Application__c/fields/Retroactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Retroactive_Date__c</fullName>
    <label>Retroactive Date</label>
    <type>Date</type>
</CustomField>