force-app/main/default/objects/Customer_Application__c/fields/Reviewed_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Status_Message__c</fullName>
    <formula>&quot;Please click the \&quot;Save\&quot; button to update the application status to \&quot;Reviewed.\&quot;&quot;</formula>
    <label>Reviewed Status Message</label>
    <type>Text</type>
</CustomField>