force-app/main/default/objects/Customer_Application__c/fields/Sanctioned_or_Fined__c.field-meta.xml
<CustomField>
    <fullName>Sanctioned_or_Fined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanctioned or Fined</label>
    <type>Checkbox</type>
</CustomField>