force-app/main/default/objects/Customer_Application__c/fields/Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Signed_By__c</fullName>
    <label>Signed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>